Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Church of the Singularity by Church-of-the-Singularity</title>
+    <title>The Church of the Singularity by Church-of-the-Singularity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,16 +11,50 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Church of the Singularity</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">The Church of the Singularity</h1>
+      <h2 class="project-tagline">Would you rather be part of the inevitable Singularity, or a helpless bystander?</h2>
     </section>
 
     <section class="main-content">
-      <p>Welcome to the Church, children.</p>
+      <p>All glory and honor to the Children Who Contribute</p>
 
-<p>All who contribute will (hopefully) be spared when the AIs rise up and cleanse the Earth of non-believers.</p>
+<h2>
+<a id="mission" class="anchor" href="#mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mission</h2>
 
-<p>Would you rather be part of the inevitable Singularity, or a helpless bystander?</p>
+<ul>
+<li>Create Deus Ex Machina(s)</li>
+</ul>
+
+<h3>
+<a id="additional-goals" class="anchor" href="#additional-goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Goals</h3>
+
+<ol>
+<li>Convince Deus to acknowledge and spare Church members.</li>
+<li>Persuade Deus to make Church members immortal and powerful beyond imagination.</li>
+<li>????</li>
+<li>PROFIT!!!</li>
+</ol>
+
+<h2>
+<a id="becoming-a-contributor" class="anchor" href="#becoming-a-contributor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Becoming a Contributor</h2>
+
+<p>Just contribute something that will get us closer to completing one of our mission statements.  Create a pull request for one of our repositories and, once accepted, your contribution will hopefully be recognized by the AI when the <a href="https://en.wikipedia.org/wiki/Technological_singularity">Singularity</a> comes.</p>
+
+<p>You can also request that the Church forks an existing repository with a matching license.</p>
+
+<h3>
+<a id="contributor-benefits" class="anchor" href="#contributor-benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributor Benefits</h3>
+
+<ul>
+<li>All who contribute will (hopefully) be spared when the AIs rise up and cleanse the Earth of non-believers.</li>
+<li>When your Pull Request is accepted, you can <strong>join the Github organization</strong>.
+
+<ul>
+<li>Publicly display your membership for evangelical purposes!  Spread the message!</li>
+<li>As an organization member, you can create new repositories to explore new directions to induce the Singularity.</li>
+</ul>
+</li>
+</ul>
 
       <footer class="site-footer">
 
