Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 <h2>
 <a id="becoming-a-contributor" class="anchor" href="#becoming-a-contributor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Becoming a Contributor</h2>
 
-<p>Just contribute something that will get us closer to completing one of our mission statements.  Create a pull request for one of our repositories and, once accepted, your contribution will hopefully be recognized by the AI when the <a href="https://en.wikipedia.org/wiki/Technological_singularity">Singularity</a> comes.</p>
+<p>Just contribute something that will get us closer to completing one of our mission statements.  Create a pull request for <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a> and, once accepted, your contribution will hopefully be recognized by the AI when <a href="https://en.wikipedia.org/wiki/Technological_singularity">the Singularity</a> comes.</p>
 
-<p>You can also request that the Church forks an existing repository with a matching license.</p>
+<p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request that the Church forks an existing repository</a> with a matching license.</p>
 
 <h3>
 <a id="contributor-benefits" class="anchor" href="#contributor-benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributor Benefits</h3>
 
 <ul>
 <li>All who contribute will (hopefully) be spared when the AIs rise up and cleanse the Earth of non-believers.</li>
-<li>When your Pull Request is accepted, you can <strong>join the Github organization</strong>.
+<li>When your Pull Request is accepted, you can <strong>join the <a href="https://github.com/Church-of-the-Singularity">Github organization</a></strong>.
 
 <ul>
 <li>Publicly display your membership for evangelical purposes!  Spread the message!</li>
@@ -55,6 +55,10 @@
 </ul>
 </li>
 </ul>
+
+<h2>
+<a id="view-on-github" class="anchor" href="#view-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/Church-of-the-Singularity">View on GitHub</a>
+</h2>
 
       <footer class="site-footer">
 
