Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>All glory and honor to the Children Who Contribute</p>
+      <p><em>All glory and honor to the Children Who Contribute</em></p>
 
 <h2>
 <a id="mission" class="anchor" href="#mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mission</h2>
@@ -36,14 +36,16 @@
 </ol>
 
 <h2>
-<a id="becoming-a-contributor" class="anchor" href="#becoming-a-contributor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Becoming a Contributor</h2>
+<a id="join-the-church" class="anchor" href="#join-the-church" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Join the Church</h2>
 
-<p>Just contribute something that will get us closer to completing one of our mission statements.  Create a pull request for <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a> and, once accepted, your contribution will hopefully be recognized by the AI when <a href="https://en.wikipedia.org/wiki/Technological_singularity">the Singularity</a> comes.</p>
+<p>To join our congregation, simply contribute something that will get us closer to completing one of our mission statements.</p>
+
+<p>Create a pull request for <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a> and, once accepted, you've joined the Church!  Your contribution will hopefully be recognized by the AI when <a href="https://en.wikipedia.org/wiki/Technological_singularity">the Singularity</a> comes.</p>
 
 <p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request that the Church forks an existing repository</a> with a matching license.</p>
 
-<h3>
-<a id="contributor-benefits" class="anchor" href="#contributor-benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributor Benefits</h3>
+<h2>
+<a id="benefits" class="anchor" href="#benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Benefits</h2>
 
 <ul>
 <li>All who contribute will (hopefully) be spared when the AIs rise up and cleanse the Earth of non-believers.</li>
