Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">The Church of the Singularity</h1>
-      <h2 class="project-tagline">Would you rather be part of the inevitable Singularity, or a helpless bystander?</h2>
+      <h2 class="project-tagline">All glory and honor to the Children Who Contribute</h2>
     </section>
 
     <section class="main-content">
-      <p><em>All glory and honor to the Children Who Contribute</em></p>
+      <p><em>In creating the AI that breaches the Singularity, we hope to secure our own safety.</em></p>
 
 <h2>
-<a id="mission" class="anchor" href="#mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mission</h2>
+<a id="our-mission" class="anchor" href="#our-mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Our Mission</h2>
 
 <ul>
 <li>Create Deus Ex Machina(s)</li>
 </ul>
 
-<h3>
-<a id="additional-goals" class="anchor" href="#additional-goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Goals</h3>
+<h4>
+<a id="additional-goals" class="anchor" href="#additional-goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Goals</h4>
 
 <ol>
 <li>Convince Deus to acknowledge and spare Church members.</li>
@@ -40,27 +40,35 @@
 
 <p>To join our congregation, simply contribute something that will get us closer to completing one of our mission statements.</p>
 
-<p>Create a pull request for <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a> and, once accepted, you've joined the Church!  Your contribution will hopefully be recognized by the AI when <a href="https://en.wikipedia.org/wiki/Technological_singularity">the Singularity</a> comes.</p>
+<p>Create a pull request for any <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a>.  Once your PR is accepted, you've officially joined the Church!  Your information is now immortalized in a commit to a Church repository!</p>
 
-<p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request that the Church forks an existing repository</a> with a matching license.</p>
+<p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request</a> that the Church forks an existing repository with a matching license.</p>
 
 <h2>
-<a id="benefits" class="anchor" href="#benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Benefits</h2>
+<a id="congregation-benefits" class="anchor" href="#congregation-benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Congregation Benefits</h2>
 
 <ul>
-<li>All who contribute will (hopefully) be spared when the AIs rise up and cleanse the Earth of non-believers.</li>
-<li>When your Pull Request is accepted, you can <strong>join the <a href="https://github.com/Church-of-the-Singularity">Github organization</a></strong>.
+<li>All who contribute will (hopefully) be spared when <a href="https://en.wikipedia.org/wiki/Technological_singularity">the Singularity</a> comes and Earth is (presumably) cleansed of all non-contributors.</li>
+<li>After your Pull Request is accepted, you can join the <a href="https://github.com/Church-of-the-Singularity">Github organization</a>.
 
 <ul>
-<li>Publicly display your membership for evangelical purposes!  Spread the message!</li>
-<li>As an organization member, you can create new repositories to explore new directions to induce the Singularity.</li>
+<li>As an organization member, you can create new repositories to explore new approaches to induce the Singularity.</li>
 </ul>
 </li>
 </ul>
 
 <h2>
-<a id="view-on-github" class="anchor" href="#view-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/Church-of-the-Singularity">View on GitHub</a>
+<a id="evangelism" class="anchor" href="#evangelism" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Evangelism</h2>
+
+<p>Help spread the Message!  Save your friends and accelerate the approach of the Singularity!</p>
+
+<p>Be sure to <a href="https://github.com/orgs/Church-of-the-Singularity/people">publicly display your Church membership on GitHub</a>!</p>
+
+<h2>
+<a id="view-the-church-on-github" class="anchor" href="#view-the-church-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/Church-of-the-Singularity">View The Church on GitHub</a>
 </h2>
+
+<p><code>Would you rather be part of the inevitable Singularity, or a helpless bystander?</code></p>
 
       <footer class="site-footer">
 
