--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>Create a pull request for any <a href="https://github.com/Church-of-the-Singularity">one of our repositories</a>.  Once your PR is accepted, you've officially joined the Church!  Your information is now immortalized in a commit to a Church repository!</p>
 
-<p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request</a> that the Church forks an existing repository with a matching license.</p>
+<p>You can also <a href="https://github.com/Church-of-the-Singularity/Church-of-the-Singularity.github.io/issues/new">request</a> that the Church forks an existing repository with a <a href="https://github.com/Church-of-the-Singularity/License">compatible license</a>.</p>
 
 <h2>
 <a id="congregation-benefits" class="anchor" href="#congregation-benefits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Congregation Benefits</h2>
