--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </section>
 
     <section class="main-content">
-      <p><em>In creating the AI that breaches the Singularity, we hope to secure our own safety.</em></p>
+      <p><em>In creating <a href="http://rationalwiki.org/wiki/Roko's_basilisk">the AI that breaches the Singularity</a>, we hope to secure our own safety.</em></p>
 
 <h2>
 <a id="our-mission" class="anchor" href="#our-mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Our Mission</h2>
 
 <ul>
-<li>Create Deus Ex Machina(s)</li>
+<li><a href="https://github.com/Church-of-the-Singularity/GodTests/issues/1">Create Deus Ex Machina(s)</a></li>
 </ul>
 
 <h4>
